fix for external_links

--- a/app/response.html
+++ b/app/response.html
@@ -9,7 +9,7 @@
     <div class="tab-content tab-content-headers" ng-show="selectedTab=='headers'">
         <div ng-show="flag" class="response-headers">    
             <div response-status code="{{ statusCode }}"></div>
-            <a class="response-url" href="{{ responseUrl }}" target="_blank"><i class="fa fa-location-arrow" aria-hidden="true"></i> {{ responseUrl }}</a>
+            <a class="response-url js-external-link" href="{{ responseUrl }}" target="_blank"><i class="fa fa-location-arrow" aria-hidden="true"></i> {{ responseUrl }}</a>
             <table class="table table-bordered">
                 <thead>
                     <tr>
